zero-schema-macros/tests/ui/fail/01_removed_container_options.rs
use zero_schema_macros::zero;

#[zero(padding = "zero", tail = "zero", validate_with = validate)]
struct RemovedContainerOptions {
    value: u8,
}

fn validate() {}

fn main() {}
